Pal-Tween spacing & content fixes

--- a/pal-ostyle.css
+++ b/pal-ostyle.css
@@ -47,13 +47,20 @@ footer {
 	margin-bottom: 0px;
 	text-align: center;
 	background-color: #92278f;
-	height: 180px;
+	height: 220px;
+	margin-top: 70px;
 }
 
 .footer-wrap {
 	width: 700px;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+/*Images*/
+
+.made {
+	margin-top: 10px;
 }
 
 /*Type Styles*/
